--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^22.14.0",
     "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.9.1",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "discord-api-types": "^0.37.70",
