feat: Implement Yahoo Finance Python service and integrate risk-free rate calculation
- Added a new Python service using Flask to fetch stock data from Yahoo Finance.
- Created endpoints for health check, current quotes, historical data, symbol search, and options data.
- Introduced a shell script to start the Python service with a virtual environment.
- Added a systemd service file for managing the Python service.
- Updated TypeScript utility functions to fetch the current risk-free rate based on treasury yields.
- Enhanced error handling and logging in both TypeScript and Python implementations.
- Refactored time to expiry calculation to return days instead of years.
- Improved data validation and null checks for API responses.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
+      - YF_PYTHON_SERVICE_URL=http://localhost:3001
     volumes:
       - ./data:/app/data
     # Healthcheck to ensure the bot is running properly
