--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,29 @@ config.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Python specific
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+ENV/
+env/
+.env/
+.venv/
+env.bak/
+venv.bak/
+pythonenv*
+.python-version
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+.eggs/
+*.egg-info/
+.installed.cfg
+*.egg
