--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@types/node": "^22.14.0",
     "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.9.1",
+    "canvas": "^3.1.0",
+    "chart.js": "^4.4.9",
+    "chartjs-node-canvas": "^5.0.0",
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
