--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   papercord:
+    build: .  # Add this to build from local Dockerfile
     image: ghcr.io/${GITHUB_USERNAME}/papercord:latest
     container_name: papercord
     restart: unless-stopped
@@ -9,6 +10,7 @@ services:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
       - YF_PYTHON_SERVICE_URL=http://localhost:3001
+      - TZ=UTC  # Set timezone explicitly for Alpine
     volumes:
       - ./data:/app/data
     # Healthcheck to ensure the bot is running properly
