--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: papercord
     restart: unless-stopped
     environment:
+      - COINGECKO_API_KEY=${COINGECKO_API_KEY}
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
       - YF_PYTHON_SERVICE_URL=http://localhost:3001
