--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
       - YF_PYTHON_SERVICE_URL=http://localhost:3001
-      - TZ=UTC  # Set timezone explicitly for Alpine
+      - TZ=UTC
     volumes:
       - ./data:/app/data
     # Healthcheck to ensure the bot is running properly
