--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - COINGECKO_API_KEY=${COINGECKO_API_KEY}
       - DISCORD_TOKEN=${DISCORD_TOKEN}
-      - YF_PYTHON_SERVICE_URL=http://localhost:3001
+      - YF_PYTHON_SERVICE_URL=http://127.0.0.1:3001
       - TZ=UTC
     volumes:
       - ./data:/app/data
